--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,11 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+     <audio id="tickSound">
+    <source src="tick_sound.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
    <div id="voiceSelectContainer" class="voice-select-container">
     <select id="voiceSelect">
       <option value="">Select a voice...</option>
@@ -18,6 +23,7 @@
   <button id="startButton">Start</button>
 
   <script>
+  const tickSound = document.getElementById('tickSound');
 const wordContainer = document.getElementById('wordContainer');
 const countdownValueElement = document.getElementById('countdownValue');
 const countdownElement = document.getElementById('countdown');
@@ -77,9 +83,14 @@ async function readTextFile() {
       for (let countdown = TTS_DELAY / 1000; countdown >= 0; countdown--) {
 		    countdownElement.classList.add('countdown-border'); // Add the class
         countdownValueElement.textContent = countdown;
+		 tickSound.currentTime = 0; // Reset the audio to the beginning
+        tickSound.play();
         await wait(1000); // Wait for 1 second
       }
 
+ // Stop the tick sound
+      tickSound.pause();
+      tickSound.currentTime = 0;
       const selectedVoiceIndex = voiceSelect.value;
       if (selectedVoiceIndex !== "") {
         const selectedVoice = voices[selectedVoiceIndex];
